--- a/main.css
+++ b/main.css
@@ -1,6 +1,9 @@
 @charset "utf-8";
 /* CSS Document */
-
+*, html {
+    padding: 0;
+    margin: 0;
+}
 body {
     overflow: hidden;
 }
@@ -38,4 +41,18 @@ body {
     padding: 50px;
     transform: translate(-50px, -50px);
     border-radius: 100%;
+}
+.click-info {
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    padding: 10px;
+    background: rgba(0, 0, 0, .85);
+    color: white;
+    font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+    z-index: 5;
 }
